--- a/.ops.yaml
+++ b/.ops.yaml
@@ -53,5 +53,4 @@ task:
           \"name\": \"${ACCOUNT_NAME}\"
         }" | jq -e -r .id)
         python3 ops/tool/md2json.py -a ${author_id} -d "linux,golang" > "${TMP}/result.json"
-      - while read line; do echo "$line" | jq -r .title; done <"tmp/env/dev/result.json"
-
+      - cat "${TMP}/result.json" | while read -r line; do curl -H "Origin:localhost" -X POST --data-binary "$line" http://${RPC_ARTICLE_SERVICE}/v1/article; echo; done
