--- a/.ops.yaml
+++ b/.ops.yaml
@@ -52,5 +52,5 @@ task:
           \"key\": \"${key}\",
           \"name\": \"${ACCOUNT_NAME}\"
         }" | jq -e -r .id)
-        python3 ops/tool/md2json.py -a ${author_id} -d "linux,golang,flutter" > "${TMP}/result.json"
+        python3 ops/tool/md2json.py -a ${author_id} -d "linux,golang,flutter,kubernetes" > "${TMP}/result.json"
       - cat "${TMP}/result.json" | while read -r line; do curl -H "Origin:localhost" -X POST --data-binary "$line" http://${RPC_ARTICLE_SERVICE}/v1/article; echo; done
