--- a/.ops.yaml
+++ b/.ops.yaml
@@ -41,16 +41,18 @@ task:
         }
       - |
         key=$(curl -XPOST -s "http://${RPC_ACCOUNT_SERVICE}/v1/getAccountByPhoneOrEmail" -d "{\"username\": \"${ACCOUNT_EMAIL}\"}" | jq -e -r .id)
-        curl -XPOST -H "Origin:localhost" -s "http://${RPC_ARTICLE_SERVICE}/v1/addOrUpdateAuthor" -d "{
+        curl -XPOST -H "Origin:localhost" -s "http://${RPC_ARTICLE_SERVICE}/v1/author" -d "{
           \"key\": \"${key}\",
-          \"name\": \"${ACCOUNT_NAME}\"
+          \"name\": \"${ACCOUNT_NAME}\",
+          \"avatar\": \"${ACCOUNT_AVATAR}\"
         }" && echo
   put-article:
     step:
       - |
-        author_id=$(curl -XPOST -H "Origin:localhost" -s "http://${RPC_ARTICLE_SERVICE}/v1/addOrUpdateAuthor" -d "{
+        author_id=$(curl -XPOST -H "Origin:localhost" -s "http://${RPC_ARTICLE_SERVICE}/v1/author" -d "{
           \"key\": \"${key}\",
-          \"name\": \"${ACCOUNT_NAME}\"
+          \"name\": \"${ACCOUNT_NAME}\",
+          \"avatar\": \"${ACCOUNT_AVATAR}\"
         }" | jq -e -r .id)
         python3 ops/tool/md2json.py -a ${author_id} -d "linux,golang,flutter,kubernetes" > "${TMP}/result.json"
-      - cat "${TMP}/result.json" | while read -r line; do curl -H "Origin:localhost" -X POST --data-binary "$line" http://${RPC_ARTICLE_SERVICE}/v1/article; echo; done
+      - cat "${TMP}/result.json" | while read -r line; do curl -XPOST -H "Origin:localhost" --data-binary "$line" http://${RPC_ARTICLE_SERVICE}/v1/article; echo; done
