--- a/.ops.yaml
+++ b/.ops.yaml
@@ -63,11 +63,13 @@ task:
   put-image:
     step:
       - mkdir -p ${TMP}/image/thumbnail/
+      - mc alias set "${MINIO_NAME}" "${MINIO_ENDPOINT}" "${MINIO_USERNAME}" "${MINIO_PASSWORD}" --api S3v4
+      - mc ls ${MINIO_NAME}/article || mc mb ${MINIO_NAME}/article
+      - mc cp ops/image/avatar/hatlonely.png ${MINIO_NAME}/article/avatar
       - |
         for file in `ls ops/image/thumbnail`; do
-            echo magick ops/image/thumbnail/${file} -resize 12.5% ${TMP}/image/thumbnail/${file%%.*}.png
-            magick ops/image/thumbnail/${file} -resize 12.5% ${TMP}/image/thumbnail/${file%%.*}.png
-            break
+            dst_filename=${file%%.*}.png
+            echo magick ops/image/thumbnail/${file} -resize 512x512 ${TMP}/image/thumbnail/${dst_filename}
+            docker run --rm -v $(pwd)/ops/image/thumbnail:/src -v $(pwd)/${TMP}/image/thumbnail:/dst dpokidov/imagemagick /src/${file} -resize 512x512 /dst/${dst_filename}
+            mc cp ${TMP}/image/thumbnail/${dst_filename} ${MINIO_NAME}/article/thumbnail/${dst_filename}
         done
-      - mc alias set "${MINIO_NAME}" "${MINIO_ENDPOINT}" "${MINIO_USERNAME}" "${MINIO_PASSWORD}" --api S3v4
-      - mc mb ${MINIO_NAME}/article
